fixed img on small device

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -100,7 +100,7 @@ body {
   }
   
   img {
-    max-width:120%;
+    max-width:95%;
   }
   
   header {
